@@ -2,7 +2,7 @@
 	cl_effect.c
 	Client side effects.
 
-	$Header: /cvsroot/uhexen2/engine/hexen2/cl_effect.c,v 1.19 2009-01-10 22:08:50 sezero Exp $
+	$Id$
 */
 
 // HEADER FILES ------------------------------------------------------------
